Add VLC installation

--- a/config/dconf.ini
+++ b/config/dconf.ini
@@ -45,8 +45,8 @@ name='Tools'
 translate=false
 
 [org/gnome/desktop/app-folders/folders/402614a7-407c-489d-90c6-4cd37264c0c3]
-apps=['org.gnome.eog.desktop', 'shotwell.desktop', 'org.gnome.gThumb.desktop', 'org.gnome.Totem.desktop', 'org.gnome.Cheese.desktop', 'rhythmbox.desktop']
-name='Pictures & Music'
+apps=['org.gnome.eog.desktop', 'shotwell.desktop', 'org.gnome.gThumb.desktop', 'org.gnome.Totem.desktop', 'vlc.desktop', 'rhythmbox.desktop', 'org.gnome.Cheese.desktop']
+name='Pictures & Movies'
 translate=false
 
 [org/gnome/desktop/app-folders/folders/4ccf67c5-0405-4f31-a1e0-9a1450c46cc8]
