Update notification configuration

--- a/config/dconf.ini
+++ b/config/dconf.ini
@@ -116,8 +116,11 @@ release-check-time=uint32 1679966136
 region='en_US.UTF-8'
 
 [org/gnome/desktop/notifications]
-application-children=['org-gnome-calendar', 'gnome-power-panel', 'slack', 'org-gnome-evolution-alarm-notify']
+application-children=['gnome-network-panel', 'gnome-power-panel', 'org-gnome-calendar', 'org-gnome-evolution-alarm-notify', 'org-gnome-nautilus', 'slack']
 show-in-lock-screen=false
+
+[org/gnome/desktop/notifications/application/gnome-network-panel]
+application-id='gnome-network-panel.desktop'
 
 [org/gnome/desktop/notifications/application/gnome-power-panel]
 application-id='gnome-power-panel.desktop'
@@ -127,6 +130,9 @@ application-id='org.gnome.Calendar.desktop'
 
 [org/gnome/desktop/notifications/application/org-gnome-evolution-alarm-notify]
 application-id='org.gnome.Evolution-alarm-notify.desktop'
+
+[org/gnome/desktop/notifications/application/org-gnome-nautilus]
+application-id='org.gnome.Nautilus.desktop'
 
 [org/gnome/desktop/notifications/application/slack]
 application-id='slack.desktop'
