--- a/config/dconf.ini
+++ b/config/dconf.ini
@@ -39,7 +39,7 @@ name='Tools'
 translate=false
 
 [org/gnome/desktop/app-folders/folders/402614a7-407c-489d-90c6-4cd37264c0c3]
-apps=['org.gnome.eog.desktop', 'shotwell.desktop', 'org.gnome.gThumb.desktop', 'org.gnome.Totem.desktop', 'vlc.desktop', 'rhythmbox.desktop', 'org.gnome.Cheese.desktop']
+apps=['org.gnome.eog.desktop', 'shotwell.desktop', 'org.gnome.Totem.desktop', 'rhythmbox.desktop', 'org.gnome.Cheese.desktop', 'vlc.desktop', 'gimp.desktop', 'org.gnome.gThumb.desktop']
 name='Pictures & Movies'
 translate=false
 
